--- a/src/components/ui/ItemGrid2.astro
+++ b/src/components/ui/ItemGrid2.astro
@@ -7,7 +7,7 @@ import Button from './Button.astro';
 const { items = [], columns, defaultIcon = '', classes = {} } = Astro.props;
 
 const {
-  container: containerClass = '',
+  container: containerClass = 'asdf',
   // container: containerClass = "sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3",
   panel: panelClass = '',
   title: titleClass = '',
