--- a/src/components/widgets/BlogLatestPosts.astro
+++ b/src/components/widgets/BlogLatestPosts.astro
@@ -22,7 +22,7 @@ const {
   linkText = 'View all posts',
   linkUrl = getBlogPermalink(),
   information = await Astro.slots.render('information'),
-  count = 4,
+  count = 8,
 
   id,
   isDark = false,
@@ -43,12 +43,12 @@ const posts = APP_BLOG.isEnabled ? await findLatestPosts({ count }) : [];
               class="text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none group font-heading mb-2"
               set:html={title}
             />
-            {APP_BLOG.list.isEnabled && linkText && linkUrl && (
+            {/* {APP_BLOG.list.isEnabled && linkText && linkUrl && (
               <Button variant="link" href={linkUrl}>
                 {' '}
                 {linkText} »
               </Button>
-            )}
+            )} */}
           </div>
         )}
 
